fix: harden nested item validation